--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: Streamdata Gallery US Bank
+title: Streamdata API Gallery - US Bank
+description: A gallery of APIs to demonstrate what is possible when it comes to making data, content, and algorithms more real time, and event-driven as part of the API economy.
 url: us-bank.streamdata.gallery
 tag: US Bank
 markdown: kramdown
